WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83468
[Qt][WK2] Fail to activate links after double tap gesture.
https://bugs.webkit.org/show_bug.cgi?id=83468
Summary
[Qt][WK2] Fail to activate links after double tap gesture.
alan
Reported
2012-04-09 07:54:30 PDT
After the double tap gesture, no links within 120px (maxDoubleTapDistance) can be activated. Gesture recognizer gets stuck in double tap gesture mode. Need to reset it.
Attachments
Patch
(2.74 KB, patch)
2012-04-09 08:06 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2012-04-09 08:06:20 PDT
Created
attachment 136225
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-09 12:31:53 PDT
Comment on
attachment 136225
[details]
Patch Clearing flags on attachment: 136225 Committed
r113605
: <
http://trac.webkit.org/changeset/113605
>
WebKit Review Bot
Comment 3
2012-04-09 12:31:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug