[Qt][WK2] Fail to activate links after double tap gesture. https://bugs.webkit.org/show_bug.cgi?id=83468

Patch by Zalan Bujtas <zbujtas@gmail.com> on 2012-04-09
Reviewed by Kenneth Rohde Christiansen.

.:

* ManualTests/link-activation-fails-after-double-tap-gesture.html: Added.

Source/WebKit2:

After a recognized double tap gesture, QtTapGestureRecognizer
gets stuck in the double-tap state. Only tapping outside of
the double tap radius cancels it.
Call reset() to set the default state back.

* UIProcess/qt/QtTapGestureRecognizer.cpp:
(WebKit::QtTapGestureRecognizer::recognize):

ManualTests/link-activation-fails-after-double-tap-gesture.html: Added.

Canonical link: https://commits.webkit.org/100922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113605 268f45cc-cd09-0410-ab3c-d52691b4dbfc